<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <!--
         <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="collapseActionView|ifRoom"
        android:showAsAction="never"
        android:title="@string/action_settings"/>
    -->

    <item
        android:id="@+id/menu_home"
        android:icon="@drawable/home"
        android:showAsAction="collapseActionView|ifRoom"
        android:title="@string/menu_home"/>
    
    <item
        android:id="@+id/menu_add_song"
        android:icon="@drawable/add"
        android:showAsAction="collapseActionView|ifRoom"
        android:title="@string/menu_add_song"/>
    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_search"
        android:showAsAction="collapseActionView|ifRoom"
        android:title="@string/search_title"
        android:actionViewClass="android.widget.SearchView"/>
    <item
        android:id="@+id/menu_logout"
        android:icon="@drawable/lock"
        android:showAsAction="collapseActionView|ifRoom"
        android:title="@string/menu_logout"/>

</menu>