<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/background_selector"
	android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PickTag"
    android:orientation="vertical"
    >

 
     
    <TextView
        android:id="@+id/inputTag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inputATag"
        android:textSize="18sp"
        android:padding="5dp"
        android:layout_marginBottom="5dp"
        />
    

    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="15dp"
        >
    
    <EditText
        android:id="@+id/searchByTag"
        android:inputType="textCapWords"
        android:hint="@string/inputTagHint"
        android:layout_width="0dp"
        android:layout_weight="3"
        android:layout_height="wrap_content"
        android:gravity="left"
        android:background="@drawable/edittext_shape"
        android:padding="5dp"
        android:layout_marginRight="5dp"
        />
    
   <Button 
        android:id="@+id/goTagSearch"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/confirm_tag"
        android:textColor="@color/text"
        android:background="@drawable/button_selector"
        android:onClick="tagSearch"
        />
   
   </LinearLayout>
    
    <TextView
        android:id="@+id/pickTag"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pickTag"
        android:textSize="18sp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp" />
    
    <Button
        android:id="@+id/tagDecade"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="@drawable/button_selector"
        android:text="@string/tagDecade"
        android:textColor="@color/text"
        android:onClick="decadePicked"
        android:layout_marginBottom="5dp"
        />
    <Button
        android:id="@+id/tagGenre"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="@drawable/button_selector"
        android:text="@string/tagGenre"
        android:textColor="@color/text"
        android:onClick="genrePicked"
        android:layout_marginBottom="5dp"
        />
    <Button
        android:id="@+id/tagMood"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="@drawable/button_selector"
        android:text="@string/tagMood"
        android:textColor="@color/text"
        android:onClick="moodPicked"
        android:layout_marginBottom="5dp"
        />
	<Button
        android:id="@+id/tagDescription"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:background="@drawable/button_selector"
        android:text="@string/tagDescription"
        android:textColor="@color/text"
        android:onClick="descriptionPicked"
        android:layout_marginBottom="5dp"
        />
 
    

	</LinearLayout>