<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="@drawable/background_selector" >

<!--     <ImageView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/music_description"
        android:src="@drawable/login" /> -->
    
     <EditText
        android:id="@+id/usernameInput"
        android:inputType="textCapWords"
        android:layout_width="185dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/guestlogin"
        android:layout_marginRight="14dp"
        android:layout_marginTop="37dp"
        android:background="@drawable/edittext_shape"
        android:ems="10"
        android:hint="@string/username"
        android:padding="5dp"
        android:textColor="@color/black"
         />

    <EditText
        android:id="@+id/password"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/usernameInput"
        android:layout_alignRight="@+id/usernameInput"
        android:layout_below="@+id/usernameInput"
        android:layout_marginTop="27dp"
        android:background="@drawable/edittext_shape"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="5dp"
        android:textColor="@color/black" />

    <Button
        android:id="@+id/login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/password"
        android:layout_toRightOf="@+id/usernameInput"
        android:background="@drawable/button_selector"
        android:onClick="userLogin"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:text="@string/login"
        android:textColor="@color/text" />

<!--     <ImageView
        android:id="@+id/music_logo"
        android:layout_width="200dp"
        android:layout_height="190dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/music_description"
        android:scaleType="fitXY"
        android:src="@drawable/logo" /> -->

    <Button
        android:id="@+id/guestlogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"
        android:background="@drawable/button_selector"
        android:gravity="center"
        android:onClick="loginClick"
        android:padding="15dp"
        android:text="@string/guestlogin"
        android:textColor="@color/text" /> 
	
	</RelativeLayout>