<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".AddSong"
    android:background="@drawable/background_selector"
    android:orientation="vertical" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="right"
        android:paddingBottom="10dp">
     
        <TextView
        android:id="@+id/label_songname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/songname"
        android:textSize="20sp"
        android:padding="5dp"
        android:layout_marginBottom="10dp"
        android:gravity="center" />
        
        <EditText
            android:id="@+id/add_songname"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/label_songname"
            android:padding="5dp"
            android:background="@drawable/edittext_shape"
            android:inputType="textCapWords"
            android:layout_marginBottom="10dp"
            />        
     
        <TextView
        android:id="@+id/label_artistname"    
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/artistname"
        android:textSize="20sp"
        android:padding="5dp"
        android:layout_below="@id/label_songname"
        android:layout_marginBottom="10dp"
         />
        
        <EditText
            android:id="@+id/add_artistname"
            android:layout_width="190dp"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/label_artistname"
            android:layout_below="@id/add_songname"
            android:layout_alignLeft="@id/add_songname"
            android:padding="5dp"
            android:background="@drawable/edittext_shape"
            android:inputType="textCapWords"
            android:layout_marginBottom="10dp"
            />        
    </RelativeLayout>
    
    <Button
        android:id="@+id/add_song_to_db"
        android:background="@drawable/button_selector"
        android:text="@string/add_song_to_db"
        android:textColor="@color/text"
        android:onClick="addSong"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        />
    
    <!-- <Button
        android:id="@+id/assign_tag"
        android:background="@drawable/button_selector"
        android:text="@string/add_tag"
        android:onClick="addTag"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        /> -->
    
    

    

</LinearLayout>